# AgarCL

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.txt  Dockerfile.v3.txt  Dockerfile.withoutcode.txt  README.md  SPS_values_full_opt_grid.csv  SPS_values_full_opt_screen.csv  SPS_values_full_opt_screen_10sec.csv  SPS_values_full_opt_screen_6sec.csv  SPS_values_non_opt_grid.csv  SPS_values_not_opt_screen.csv  SPS_values_opt1_grid.csv  SPS_values_opt2_screen.csv  SPS_values_opt_screen.csv  YOUR_PATH_TO_SAVE_THE_SNAPSHOT.json  agarle_test.py  episodic_rewards_0.csv  install.sh  plot.ipynb  requirements.txt  setup.py  sps_values.csv  sps_values_1024_0_CPUs.csv  sps_values_128_0_CPUs.csv  sps_values_84_0_CPUs.csv  step_rewards.csv  temp_readme_to_be_edited.md  test  todo.txt
.github/workflows/: pr_build.yml
YOUR_PATH_TO_SAVE_THE_VIDEO/: VIDEO_NAME.avi
agario/: CMakeLists.txt
agario/bots/: Bot.hpp  benchmark.cpp
agario/client/: client.hpp  main.cpp
agario/core/: Ball.hpp  Entities.hpp  Player.hpp  renderables.hpp  settings.hpp  utils.hpp
agario/engine/: Engine.hpp  GameState.hpp
agario/rendering/: FrameBufferObject.hpp  platform.hpp  renderer.hpp  shader.hpp  utils.hpp  window.hpp
agario/test/: main.cpp  renderable.hpp  test-engine.hpp
agario/utils/: collision_detection.hpp  random.hpp  structures.hpp
bench/: CMakeLists.txt  agarle_bench.py  agent_actions.csv  bench_video.avi  debug_env.py  go_bigger_example.py  main.cpp  random_walk.py  reshaped_data_0.txt  reshaped_data_1.txt  reshaped_data_2.txt  rewards.txt  screen_obs_example.py  state_matrix_step_1.txt  step_rewards.csv  step_rewardsg.csv  test.json  test_sps.py  x copy.ipynb  x.ipynb
bench/random_walk_full_game/: episodic_rewards_sps_1.csv  episodic_rewards_sps_2.csv  episodic_rewards_sps_3.csv  episodic_rewards_sps_4.csv  episodic_rewards_sps_5.csv  episodic_rewards_sps_6.csv  episodic_rewards_sps_7.csv  episodic_rewards_sps_8.csv  episodic_rewards_sps_9.csv
bench/results/: frame_0.txt  frame_1.txt  frame_2.txt  frame_3.txt  frame_4.txt
bench/tasks_configs/: Continual.json  Exploration.json  mode_1.json  mode_10.json  mode_2.json  mode_3.json  mode_4.json  mode_5.json  mode_6.json  mode_7.json  mode_8.json  mode_9.json  simple.json
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
environment/: CMakeLists.txt  bindings.cpp
environment/envs/: BaseEnvironment.hpp  GoBiggerEnvironment.hpp  GridEnvironment.hpp  RamEnvironment.hpp  ScreenEnvironment.hpp
environment/glad/include/glad/: glad.h
environment/glad/src/: glad.c
environment/test/: grid-env-test.hpp  ram-env-test.hpp
gym_agario/: AgarioEnv.py  __init__.py  agar_utils.py
tests/: __init__.py  __main__.py  grid_env_test.py  ram_env_test.py  screen_env_test.py
